src/objects/CH_NotificationEventLog__c.object
<CustomObject>
    <fields>
        <fullName>CH_CPUTime__c</fullName>
        <label>CPU Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_CaseNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ClassName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_EventType__c</fullName>
        <label>Event Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical-Yes</fullName>
                </value>
                <value>
                    <fullName>Critical-No</fullName>
                </value>
                <value>
                    <fullName>Major-Yes</fullName>
                </value>
                <value>
                    <fullName>Major-No</fullName>
                </value>
                <value>
                    <fullName>Outage Update</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Distribute Comment Update</fullName>
                </value>
                <value>
                    <fullName>Restored</fullName>
                </value>
                <value>
                    <fullName>CA-Critical</fullName>
                </value>
                <value>
                    <fullName>CA-Major</fullName>
                </value>
                <value>
                    <fullName>CA-Minor</fullName>
                </value>
                <value>
                    <fullName>CA-IR</fullName>
                </value>
                <value>
                    <fullName>T15</fullName>
                </value>
                <value>
                    <fullName>T60</fullName>
                </value>
                <value>
                    <fullName>T180</fullName>
                </value>
                <value>
                    <fullName>T360</fullName>
                </value>
                <value>
                    <fullName>T720</fullName>
                </value>
                <value>
                    <fullName>T1440</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_HeapSize__c</fullName>
        <label>Heap Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_JobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_MethodName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_NoOfSubscribersforEmail__c</fullName>
        <label>No.of Subscribers for Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_NumberOfCases__c</fullName>
        <label>No.Of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_NumberOfSubscribers__c</fullName>
        <label>Number Of Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_RelatedJobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Workgroup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Notification Event Log</label>
    <nameField>
        <displayFormat>NEL-{00000}</displayFormat>
        <label>Notification Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>